examples/tls-route-with-own-cert.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tls-parking
spec:
  hostnames:
  - tls-parking.my-test.com
  parentRefs:
  - name: my-hotel
    sectionName: tls-with-customer-cert
  rules:
  - backendRefs:
    - name: parking-ver3
      kind: Service
      port: 80
    matches:
    - path:
        type: Exact
        value: /parking
